--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -114,6 +114,36 @@ h2:after {
 
 }
 
+.icon-small {
+  display: inline-block;
+  width: 30px;
+  text-align: center;
+  color: #e67e22;
+  font-size: 120%;
+
+  /* secrets to align text and icons */
+  vertical-align: middle;
+  margin-top: -5px;
+  margin-right: 10px;
+}
+
+/*-------Links------*/
+
+a:link,
+a:visited {
+  color: #e67e22;
+  text-decoration: none;
+  padding-bottom: 1px;
+  border-bottom: 1px solid #e67e22;
+  transition: border-bottom 0.2s, color 0.2s;
+}
+
+a:hover,
+a:active {
+  color: #555;
+  border-bottom: 1px solid transparent;
+}
+
 /*-------Buttons------*/
 
 .btn:link,
@@ -306,9 +336,28 @@ header {
   margin-right: 25px;
 }
 
+.btn-app:link,
+.btn-app:visited {
+  border: 0;
+}
+
 .btn-app img {
   height: 50px;
   width: auto;
   margin-right: 10px;
 
+}
+
+/* -------------------------------------------------------- */
+/* Cities */
+/* -----------------------------------------------------------  */
+
+.box img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 15px;
+}
+
+.city-feature {
+  margin-bottom: 5px;
 }
