--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -514,7 +514,7 @@ footer {
   margin-right: 20px;
 }
 
-.footer-nav li: :last-child,
+.footer-nav li:last-child,
 .social-links li:last-child {
   margin-right: 0;
 }
