--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,13 +8,15 @@
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
   background-color: white;
   color: #555;
   font-family: 'Lato', 'Arial', sans-serif;
   font-weight: 300;
   font-size: 20px;
   text-rendering: optimizeLegibility;
+  overflow-x: hidden;
 }
 
 .clearfix {
@@ -325,14 +327,14 @@ header {
 .works-step div {
   color: #e67e22;
   border: 2px solid #e67e22;
+  font-size: 150%;
   display: inline-block;
   border-radius: 50%;
   width: 55px;
   height: 55px;
   text-align: center;
-  padding: 5px;
   float: left;
-  font-size: 150%;
+  padding: 5px;
   margin-right: 25px;
 }
 
@@ -447,6 +449,7 @@ cite img {
   font-size: 30%;
   font-weight: 300;
 }
+
 .plan-price-meal {
   font-size: 80%;
 }
@@ -485,6 +488,7 @@ textarea {
 input[type='checkbox'] {
   margin: 10px 5px 10px 0;
 }
+
 *:focus {
   outline: none;
 }
@@ -495,7 +499,8 @@ input[type='checkbox'] {
 
 footer {
   background-color: #333;
-  padding: 50px;
+  padding: 30px;
+  font-size: 80%;
 }
 
 .footer-nav {
@@ -526,6 +531,7 @@ footer {
   text-decoration: none;
   border: 0;
   color: #888;
+  transition: color 0.2s;
 }
 
 .footer-nav li a:hover,
@@ -533,14 +539,40 @@ footer {
   color: #ddd;
 }
 
-.social-links li a:hover,
-.social-links li a:active {
-  font-size: 180%;
+.social-links li a:link,
+.social-links li a:visited {
+  font-size: 160%;
+}
+
+.logo-facebook,
+.logo-twitter,
+.logo-googleplus,
+.logo-instagram {
+  transition: color 0.2s;
+}
+
+.logo-twitter:hover {
+  color: #55acee;
+}
+
+.logo-facebook:hover {
+  color: #3b5998;
+}
+
+.logo-googleplus:hover {
+  color: #dd4b39;
+}
+
+.logo-instagram:hover {
+  color: #e95950;
 }
 
 footer p {
   color: #888;
   text-align: center;
-  font-size: 90%;
-  margin-top: 30px;
+  margin-top: 20px;
 }
+
+/* -------------------------------------------------------- */
+/* Media Queries */
+/* -----------------------------------------------------------  */
