--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,6 +18,7 @@ body {
   font-size: 20px;
   text-rendering: optimizeLegibility;
   overflow-x: hidden;
+  /* scroll-behavior: smooth;  This property works like a charm too but may not have cross browser support(DEc 2019), hence the use of jquery*/
 }
 
 .clearfix {
