--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -197,7 +197,13 @@ input[type='submit']:active {
 /* -----------------------------------------------------------  */
 
 header {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.705)), to(rgba(0, 0, 0, 0.705))),
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 0.705)),
+      to(rgba(0, 0, 0, 0.705))
+    ),
     url(img/hero.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.705)),
     url(img/hero.jpg);
@@ -262,6 +268,15 @@ header {
   border-bottom: 2px solid #e67e22;
 }
 
+/* Hamburger menu  */
+
+.hamburger-menu {
+  float: right;
+  margin-top: 30px;
+  cursor: pointer;
+  display: none;
+}
+
 /* Sticky Navigation */
 .sticky {
   position: fixed;
@@ -273,7 +288,6 @@ header {
   z-index: 9999;
 }
 
-
 .sticky .main-nav {
   margin-top: 18px;
 }
@@ -282,7 +296,6 @@ header {
 .sticky .main-nav li a:visited {
   padding: 16px 0;
   color: #555;
-
 }
 
 .sticky .logo {
@@ -422,7 +435,13 @@ header {
 /* -----------------------------------------------------------  */
 
 .section-testimonials {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.795)), to(rgba(0, 0, 0, 0.795))),
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 0.795)),
+      to(rgba(0, 0, 0, 0.795))
+    ),
     url(img/back-customers.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.795), rgba(0, 0, 0, 0.795)),
     url(img/back-customers.jpg);
