--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -202,9 +202,9 @@ header {
       left bottom,
       from(rgba(0, 0, 0, 0.705)),
       to(rgba(0, 0, 0, 0.705))),
-    url(img/hero.jpg);
+    url(img/hero-min.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.705)),
-    url(img/hero.jpg);
+    url(img/hero-min.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -443,9 +443,9 @@ header {
       left bottom,
       from(rgba(0, 0, 0, 0.795)),
       to(rgba(0, 0, 0, 0.795))),
-    url(img/back-customers.jpg);
+    url(img/back-customers-min.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.795), rgba(0, 0, 0, 0.795)),
-    url(img/back-customers.jpg);
+    url(img/back-customers-min.jpg);
   background-size: cover;
   color: white;
   background-attachment: fixed;
